IMPALA-56 - explicitly close query executor